fix vertical alignment

--- a/static/css/statistics.css
+++ b/static/css/statistics.css
@@ -28,6 +28,7 @@ table tfoot{
 
 table td{
     padding: 5px;
+    vertical-align: middle;
 }
 
 .label{
